--- a/css/cssVer1.css
+++ b/css/cssVer1.css
@@ -15,4 +15,10 @@ h1, h2, h3, h4 {
 	font-weight: 600;
 	margin-top: 50px;
 }
+input[type=range] {
+	width: 350px;
+}
+input[type=number] {
+	width: 50px;
+}
 
